# esp-blink

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  aws_iot.c  aws_iot.h  main.c  time_util.c  time_util.h
